# dotfiles

./: .Xmodmap  .chktexrc  .clang-format  .clang-tidy  .clean-spell-hook.sh  .gdbinit  .gitconfig  .gitignore  .gitmodules  .gvimrc  .indentconfig.yaml  .init.sh  .inputrc  .latexindent.yaml  .latexmkrc  .rustfmt.toml  .tmux.conf  .travis.yml  .vimrc  .zshenv  .zshrc  .zshrc.local  Cargo.toml  ESSENTIAL_SOFTWARE.md  README.md  commit_on_main.sh  merge_main.sh  nvim.yml  push_local_branch_and_main.sh  selene.ci.toml  selene.toml  update_submodules.sh
.cargo/: config
.config/alacritty/: alacritty.yml
.config/bat/: config
.config/nvim/: filetype.vim
.config/paru/: paru.conf
.config/yay/: config.json
.config/zathura/: zathurarc
.doom.d/: config.el  init.el
.dotfiles-extra/: check-for-programs.sh  init.sh  test.sh  utils.sh
.dotfiles-extra/dockerfiles/: alpine.Dockerfile  arch.Dockerfile  debian-stable.Dockerfile  debian-testing.Dockerfile  debian-unstable.Dockerfile  opensuse-tumbleweed.Dockerfile  ubuntu.Dockerfile
.github/: LICENSE.md  README.md  dependabot.yaml
.github/workflows/: ci.yml
.vim/: coc-settings.json
.vim/autoload/: plug.vim
.vim/spell/: en.utf-8.add  en.utf-8.add.spl
bash/: lib.sh
files/: .Xmodmap  .gitconfig  .gvimrc  .indentconfig.yaml  .inputrc  .latexindent.yaml  .npmrc  .tmux.conf  .zlogout  .zshenv  .zshrc.local  .zshrc.pre
files/.cargo/: config.toml
installer/: Cargo.toml
installer/scripts/: README.md  link_custom_xkb_layout.sh
installer/src/: backup_dir_readme.md  fail.rs  install.rs  logging.rs  main.rs  path.rs
(+21 files in other folders)
